# solana-md-contract

./: Anchor.toml  package.json
programs/mysolanaapp/: Cargo.toml
programs/mysolanaapp/src/: lib.rs
tests/: mysolanaapp.js
