[package]
name = "mysolanaapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[programs.localnet]
mysolanaapp = "72fJ18jk36MnJkwi1e1YkeUC7giAUU7UJ2DbzkXHMJBt"

[lib]
crate-type = ["cdylib", "lib"]
name = "mysolanaapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
